services/kubernetes/manifests/podsync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podsync-svc
  namespace: downloaders
  labels:
    app: podsync
spec:
  type: ClusterIP
  selector:
    app: podsync
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
